--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,10 @@
         android:gravity="center"
         android:padding="20dp"
         android:text="Fooder"
-        android:textColor="@color/white"
-        android:textSize="60dp"
+        android:textColor="@color/material_dynamic_neutral70"
+        android:textSize="70dp"
         android:textStyle="bold"
-
+        android:autoSizeMaxTextSize="100pt"
 
 
         />
