--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#28282B"
-    android:backgroundTint="#28282B"
+    android:background="@drawable/background5"
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/apploadpage"
+        android:id="@+id/firstpage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -20,7 +19,6 @@
         android:layout_marginTop="296dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="296dp"
-        android:drawableBottom="@drawable/baseline_food_bank_24"
         android:fontFamily="cursive"
         android:gravity="center"
         android:padding="20dp"
@@ -30,8 +28,10 @@
         android:textStyle="bold"
         android:autoSizeMaxTextSize="100pt"
 
-
         />
+
+
+
 
 
 </RelativeLayout>
