--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -19,6 +19,7 @@
         android:background="@drawable/round_corner"
         android:drawableLeft="@drawable/baseline_person_outline_24"
         android:text="Username"
+        android:inputType="textEmailAddress"
         android:padding="20dp"
         android:textColor="@color/material_dynamic_neutral70"
         android:drawablePadding="20dp"/>
