--- a/app/src/main/res/layout/resaturant_page.xml
+++ b/app/src/main/res/layout/resaturant_page.xml
@@ -1,43 +1,105 @@
-\
-    <?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background5">
 
-    <ScrollView
+
+    <TextView
+        android:id="@+id/resto_name"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/username"
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="cursive"
+        android:paddingLeft="10dp"
+        android:text="Chillis"
+        android:textColor="@color/material_dynamic_neutral70"
+        android:textSize="40dp" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="444dp"
+        android:shadowColor="#B84B4B"
+
+        android:text="Reserve"
+        android:textColor="@color/black" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="291dp"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
+        app:fabCustomSize="40dp"
+        app:srcCompat="@drawable/baseline_food_bank_24" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/resto_name"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="260dp"
+        android:layout_marginEnd="13dp"
+        android:fontFamily="serif-monospace"
+        android:paddingBottom="5dp"
+        android:paddingleft="20dp"
+        android:text="  Pacific Mall"
+        android:textColor="#B3A6B5" />
 
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="-8dp"
-        android:layout_marginTop="-6dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="6dp"
-        android:scrollbarThumbVertical="@color/black">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
-
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchview"
-        android:layout_width="383dp"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        app:srcCompat="@drawable/image1" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginBottom="350dp"
-        android:background="@drawable/round_corner"
-        android:drawableLeft="@drawable/baseline_person_outline_24" />
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="17dp"
+        android:layout_marginBottom="336dp"
+        android:clickable="true"
+        app:fabCustomSize="40dp"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
 
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="17dp"
+        android:layout_marginBottom="278dp"
+        android:clickable="true"
+        app:fabCustomSize="40dp"
+        app:srcCompat="@drawable/car_ui_icon_settings" />
 
 
 </android.widget.RelativeLayout>
