--- a/app/src/main/res/layout/resaturant_page.xml
+++ b/app/src/main/res/layout/resaturant_page.xml
@@ -19,7 +19,6 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:fontFamily="cursive"
-        android:paddingLeft="10dp"
         android:text="Chillis"
         android:textColor="@color/material_dynamic_neutral70"
         android:textSize="40dp" />
@@ -33,7 +32,6 @@
         android:layout_marginStart="13dp"
         android:layout_marginTop="444dp"
         android:shadowColor="#B84B4B"
-
         android:text="Reserve"
         android:textColor="@color/black" />
 
@@ -47,7 +45,8 @@
         android:layout_marginEnd="16dp"
         android:clickable="true"
         app:fabCustomSize="40dp"
-        app:srcCompat="@drawable/baseline_food_bank_24" />
+        app:srcCompat="@drawable/baseline_food_bank_24"
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/textView"
@@ -63,9 +62,9 @@
         android:layout_marginEnd="13dp"
         android:fontFamily="serif-monospace"
         android:paddingBottom="5dp"
-        android:paddingleft="20dp"
         android:text="  Pacific Mall"
-        android:textColor="#B3A6B5" />
+        android:textColor="#B3A6B5"
+        tools:ignore="HardcodedText" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -87,7 +86,8 @@
         android:layout_marginBottom="336dp"
         android:clickable="true"
         app:fabCustomSize="40dp"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
+        app:srcCompat="@drawable/ic_launcher_foreground"
+        android:contentDescription="TODO" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton3"
@@ -99,7 +99,9 @@
         android:layout_marginBottom="278dp"
         android:clickable="true"
         app:fabCustomSize="40dp"
-        app:srcCompat="@drawable/car_ui_icon_settings" />
+        app:srcCompat="@drawable/car_ui_icon_settings"
+        android:contentDescription="TODO"
+        tools:ignore="ContentDescription" />
 
 
 </android.widget.RelativeLayout>
