--- a/app/src/main/res/layout/resaturant_page.xml
+++ b/app/src/main/res/layout/resaturant_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background5">
+    android:background="@drawable/bg7">
 
 
     <TextView
@@ -19,6 +19,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:fontFamily="cursive"
+        android:paddingLeft="10dp"
         android:text="Chillis"
         android:textColor="@color/material_dynamic_neutral70"
         android:textSize="40dp" />
